# BD-magazyn-elektroniki

./: .gitignore  CMakeLists.txt  README.md
Mag_Elektr/: CMakeLists.txt
Mag_Elektr/inc/: main.hpp
Mag_Elektr/inc/common/: mainDatabase.hpp  mainStyle.hpp  mainWindow.hpp
Mag_Elektr/inc/componentsPage/: componentsPage.hpp  displayComponentsSpace.hpp  filterTypeSpace.hpp
Mag_Elektr/inc/componentsPage/component/: componentWidget.hpp  editWidget.hpp  parametersWidget.hpp  quantityWidget.hpp
Mag_Elektr/inc/componentsPage/componentsPage/: containerWidget.hpp  filterWidget.hpp  treeFilterWidget.hpp
Mag_Elektr/inc/historyPage/: historyPage.hpp
Mag_Elektr/inc/historyPage/historyPage/: containerWidget.hpp  filterWidget.hpp
Mag_Elektr/inc/loginWindow/: loginWindow.hpp
Mag_Elektr/inc/mainDatabase/: attributes.hpp  mainDatabase.hpp  queries.hpp
Mag_Elektr/inc/mainWindow/: mainToolBar.hpp  mainToolButton.hpp  mainWindow.hpp
Mag_Elektr/inc/modifyPage/: LocationWithComponent.hpp  addComponentDialog.hpp  addUserDialog.hpp  first2ColumnsLockedTableView.hpp  modComponentsPage.hpp  modLocationsPage.hpp  modUserPage.hpp  modifyPage.hpp
Mag_Elektr/lang/: Mag_Elektr_en.ts  Mag_Elektr_pl.ts
Mag_Elektr/res/: resources.qrc
Mag_Elektr/res/stylesheets/: componentsPage.qss  historyPage.qss  loginWindow.qss  mainWindow.qss  modifyPage.qss
Mag_Elektr/src/: main.cpp
Mag_Elektr/src/common/: mainDatabase.cpp  mainStyle.cpp  mainWindow.cpp
Mag_Elektr/src/componentsPage/: componentsPage.cpp  displayComponentsSpace.cpp  filterTypeSpace.cpp
Mag_Elektr/src/componentsPage/component/: componentWidget.cpp  editWidget.cpp  parametersWidget.cpp  quantityWidget.cpp
Mag_Elektr/src/componentsPage/componentsPage/: containerWidget.cpp  filterWidget.cpp  treeFilterWidget.cpp
Mag_Elektr/src/historyPage/: historyPage.cpp
Mag_Elektr/src/historyPage/historyPage/: containerWidget.cpp  filterWidget.cpp
Mag_Elektr/src/loginWindow/: loginWindow.cpp
Mag_Elektr/src/mainDatabase/: mainDatabase.cpp
Mag_Elektr/src/mainWindow/: mainToolBar.cpp  mainToolButton.cpp  mainWindow.cpp
Mag_Elektr/src/modifyPage/: addComponentDialog.cpp  addUserDialog.cpp  modComponentsPage.cpp  modLocationSPage.cpp  modLocationsPage.cpp  modUserPage.cpp  modifyPage.cpp
db/: TestDatabase.db
